[package]
name = "shit"
version = "0.1.0"
edition = "2021"

[dependencies.solana-client]
version = "1.18"
[dependencies.solana-sdk]
version = "1.18"
[dependencies.borsh]
version = "0.10"
[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.clap]
version = "2"
[dependencies.solana-remote-wallet]
version = "1.18"
[dependencies.solana-clap-utils]
version = "1.18"
[dependencies.base64]
version = "0.22"
[dependencies.bincode]
version = "1"